--- a/cms/src/app/contacts/contact-detail/contact-detail.component.html
+++ b/cms/src/app/contacts/contact-detail/contact-detail.component.html
@@ -1,19 +1,25 @@
 <div class="panel panel-default">
   <div class="panel-heading">
-    <h4>{{ contact.name }}</h4>
+    <div class="row">
+      <div class="col-xs-12">
+        <h3>{{ contact?.name }}</h3>
+      </div>
+      <div class="col-xs-12">
+        <div class="pull-left">
+          <img [src]="contact?.imageURL" alt="{{ contact?.name }}" class="img-responsive" style="max-height: 100px;">
+        </div>
+        <div class="pull-right btn-toolbar">
+          <a class="btn btn-primary">Edit</a>
+          <a class="btn btn-danger">Delete</a>
+        </div>
+      </div>
+    </div>
   </div>
   <div class="panel-body">
     <div class="row">
-      <div class="col-sm-3 text-center">
-        <img [src]="contact.imageURL" alt="{{ contact.name }}" class="img-thumbnail" style="max-width: 100px;">
-      </div>
-      <div class="col-sm-9">
-        <div class="mb-2">
-          <a href="#" class="btn btn-primary btn-sm">Edit</a>
-          <a href="#" class="btn btn-danger btn-sm">Delete</a>
-        </div>
-        <p><strong>Email:</strong> {{ contact.email }}</p>
-        <p><strong>Phone:</strong> {{ contact.phone }}</p>
+      <div class="col-xs-12">
+        <p><strong>Email:</strong> {{ contact?.email }}</p>
+        <p><strong>Phone:</strong> {{ contact?.phone }}</p>
       </div>
     </div>
   </div>
