--- a/cms/src/app/contacts/contact-list/contact-list.component.html
+++ b/cms/src/app/contacts/contact-list/contact-list.component.html
@@ -3,20 +3,12 @@
         <h3 class="panel-title pull-left">Contacts</h3>
         <a href="#" class="btn-success btn-sm pull-right">New Contact</a>
     </div>
-    <div class="row">
         <div class="row">
             <div class="col-xs-12">
-              <a 
-                href="#" 
-                class="list-group-item clearfix" 
-                *ngFor="let contact of contacts">
-                <div class="pull-left">
-                  <h4 class="list-group-item-heading">{{ contact.name }}</h4>
-                </div>
-                <span class="pull-right">
-                    <img [src]="contact.imageURL" alt="{{ contact.name }}" class="img-responsive" style="max-height: 50px;">
-                </span>
-              </a>
+              <cms-contact-item
+              *ngFor="let contactEl of contacts"
+              [contact]="contactEl"
+              (contactSelected)="onContactSelected(contactEl)"></cms-contact-item>
             </div>
           </div>
 </div>
