--- a/cms/src/app/contacts/contact-detail/contact-detail.component.html
+++ b/cms/src/app/contacts/contact-detail/contact-detail.component.html
@@ -2,11 +2,11 @@
   <div class="panel-heading">
     <div class="row">
       <div class="col-xs-12">
-        <h3>{{ contact?.name }}</h3>
+        <h3>{{ contact.name }}</h3>
       </div>
       <div class="col-xs-12">
         <div class="pull-left">
-          <img [src]="contact?.imageURL" alt="{{ contact?.name }}" class="img-responsive" style="max-height: 100px;">
+          <img [src]="contact.imageURL" alt="{{ contact.name }}" class="img-responsive" style="max-height: 100px;">
         </div>
         <div class="pull-right btn-toolbar">
           <a class="btn btn-primary">Edit</a>
@@ -18,8 +18,8 @@
   <div class="panel-body">
     <div class="row">
       <div class="col-xs-12">
-        <p><strong>Email:</strong> {{ contact?.email }}</p>
-        <p><strong>Phone:</strong> {{ contact?.phone }}</p>
+        <p><strong>Email:</strong> {{ contact.email }}</p>
+        <p><strong>Phone:</strong> {{ contact.phone }}</p>
       </div>
     </div>
   </div>
