--- a/cms/src/app/contacts/contacts.component.html
+++ b/cms/src/app/contacts/contacts.component.html
@@ -5,7 +5,8 @@
     </div>
     <div class="col-md-4">
         <cms-contact-detail
-        *ngIf="selectedContact"
-        [contact]="selectedContact"></cms-contact-detail>
+            *ngIf="selectedContact"
+            [contact]="selectedContact"    
+        ></cms-contact-detail>
     </div>
 </div>
