--- a/cms/src/app/contacts/contact-item/contact-item.component.html
+++ b/cms/src/app/contacts/contact-item/contact-item.component.html
@@ -7,7 +7,7 @@ class="list-group-item clearfix" >
     <span class="pull-right">
         <img 
         [src]="contact.imageURL" 
-        alt="{{ contact.name }}" 
+        [alt]="contact.name" 
         class="img-responsive" 
         style="max-height: 50px;">
     </span>
