--- a/cms/src/app/contacts/contacts.component.html
+++ b/cms/src/app/contacts/contacts.component.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-md-5">
         <cms-contact-list 
-        (contactWasSelected)="selectedContact = $event"></cms-contact-list>
+        (selectedContactEvent)="selectedContact = $event"></cms-contact-list>
     </div>
     <div class="col-md-4">
         <cms-contact-detail
