--- a/cms/src/app/contacts/contact-detail/contact-detail.component.html
+++ b/cms/src/app/contacts/contact-detail/contact-detail.component.html
@@ -9,8 +9,8 @@
           <img [src]="contact.imageURL" alt="{{ contact.name }}" class="img-responsive" style="max-height: 100px;">
         </div>
         <div class="pull-right btn-toolbar">
-          <a class="btn btn-primary">Edit</a>
-          <a class="btn btn-danger">Delete</a>
+          <a class="btn btn-primary" routerLink="edit">Edit</a>
+          <a class="btn btn-danger"(click)="onDelete()">Delete</a>
         </div>
       </div>
     </div>
