--- a/cms/src/app/contacts/contact-list/contact-list.component.html
+++ b/cms/src/app/contacts/contact-list/contact-list.component.html
@@ -1,14 +1,14 @@
 <div class="panel panel-default">
     <div class="panel-heading clearfix">
         <h3 class="panel-title pull-left">Contacts</h3>
-        <a href="#" class="btn-success btn-sm pull-right">New Contact</a>
+        <a routerLink="new" class="btn-success btn-sm pull-right">New Contact</a>
     </div>
         <div class="row">
             <div class="col-xs-12">
               <cms-contact-item
               *ngFor="let contact of contacts"
               [contact]="contact"
-              (click)="onSelected(contact)"></cms-contact-item>
+              ></cms-contact-item>
             </div>
           </div>
 </div>
