--- a/cms/src/app/contacts/contact-edit/contact-edit.component.html
+++ b/cms/src/app/contacts/contact-edit/contact-edit.component.html
@@ -1,1 +1,134 @@
-<p>contact-edit works!</p>
+<div class="panel panel-default">
+  <div class="panel-body">
+    <form id="contact-edit" #f="ngForm" (ngSubmit)="onSubmit(f)">
+      <div class="row">
+        <div class="col-sm-12 form-group">
+          <label for="name">Name:</label>
+          <input
+            type="text"
+            id="name"
+            name="name"
+            [(ngModel)]="contact!.name"
+            class="form-control required"
+            size="120"
+            maxlength="120"
+            required
+            #name="ngModel"
+          />
+        </div>
+      </div>
+      <div class="alert alert-danger" *ngIf="!name.valid && name.touched">
+        Please enter a valid name.
+      </div>
+      <div class="row">
+        <div class="col-sm-12 form-group">
+          <label for="email">Email:</label>
+          <input
+            type="email"
+            id="email"
+            name="email"
+            [(ngModel)]="contact!.email"
+            class="form-control required"
+            size="120"
+            maxlength="255"
+            required
+            #email="ngModel"
+            pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$"
+          />
+        </div>
+      </div>
+      <div class="alert alert-danger" *ngIf="!email.valid && email.touched">
+        Please enter a valid email address.
+      </div>
+      <div class="row">
+        <div class="col-sm-12 form-group">
+          <label for="phone">Phone:</label>
+          <input
+            type="text"
+            id="phone"
+            name="phone"
+            [(ngModel)]="contact!.phone"
+            class="form-control"
+            size="150"
+            maxlength="255"
+            #phone="ngModel"
+            pattern="\D*([2-9]\d{2})(\D*)([2-9]\d{2})(\D*)(\d{4})\D*"
+          />
+        </div>
+      </div>
+      <div class="alert alert-danger" *ngIf="!phone.valid && phone.touched">
+        Please enter a valid phone number.
+      </div>
+      <div class="row">
+        <div class="col-sm-12 form-group">
+          <label for="imageUrl">Image URL:</label>
+          <input
+            type="text"
+            id="imageUrl"
+            name="imageUrl"
+            [(ngModel)]="contact!.imageURL"
+            class="form-control"
+            size="150"
+            maxlength="255"
+            #imageUrl="ngModel"
+          />
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-12 form-group">
+          <label for="groupList">Group Contacts:</label>
+          <div
+            class="row"
+            id="groupList"
+            cdkDropList
+            [cdkDropListData]="groupContacts"
+            (cdkDropListDropped)="addToGroup($event)"
+            style="min-height: 3rem; border: 1px solid #ccc; padding: 1rem;"
+          >
+            <div *ngFor="let contact of groupContacts; let i = index" 
+                 cdkDrag 
+                 [cdkDragData]="contact">
+              <div style="margin-bottom: 8px;">
+                <cms-contact-item
+                  class="col-sm-10"
+                  [contact]="contact"
+                ></cms-contact-item>
+                <button
+                  class="btn btn-danger col-sm-2 deleteButton"
+                  type="button"
+                  (click)="onRemoveItem(i)"
+                >
+                  X
+                </button>
+              </div>
+            </div>
+            <span class="dragMsg" *ngIf="groupContacts!.length < 1">
+              Drag contacts in group here
+            </span>
+          </div>
+        </div>
+      </div>
+      <div
+        class="alert alert-danger"
+        *ngIf="(name.invalid && name.touched) || (email.invalid && email.touched)"
+      >
+        <div *ngIf="name.invalid && name.touched">Name is required.</div>
+        <div *ngIf="email.invalid && email.touched">Please enter a valid email address.</div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12 btn-toolbar">
+          <button
+            class="btn btn-success"
+            type="submit"
+            [disabled]="!f.valid"
+          >
+            {{ editMode ? 'Update' : 'Save' }}
+          </button>
+          <button class="btn btn-primary" type="button" (click)="onCancel()">
+            Cancel
+          </button>
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
