--- a/cms/src/app/contacts/contact-list/contact-list.component.html
+++ b/cms/src/app/contacts/contact-list/contact-list.component.html
@@ -7,7 +7,9 @@
         <div class="col-xs-12">
             <div 
                 cdkDropList
+                cdkDropListId="contactList"
                 [cdkDropListData]="contacts"
+                cdkDropListConnectedTo="groupList"
                 class="contact-list-container"
                 style="min-height: 60px;">
                 <div 
